[project]
name = "testigo-recall-mcp"
version = "0.5.5"
description = "MCP server for querying testigo-recall knowledge bases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "mcp>=1.0",
]

[project.scripts]
testigo-recall-mcp = "testigo_recall_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
